--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ services:
 
 before_install:
   - echo "start creating an image with dockerfile"
-  - docker build -t docker-react-app_react -f Dockerfile.dev .
+  - docker build -t e97b318a5276 -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true docker-react-app_react npm run test --
+  - docker run -e CI=true e97b318a5276 npm run test --
 
 after_success:
   - echo "Test Success"
