--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,14 @@ before_install:
 script:
   - docker run -e CI=true docker-react-app_react npm run test --
 
-after_success:
-  - echo "Test Success"
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react-app"
+  env: "Dockerreactapp-env"
+  bucket_name: "elasticbeanstalk-us-west-2-896153392792"
+  bucket_path: "docker-react-app"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
