--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - docker build -t docker-react-app_react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true docker-react-app_react npm run test --
+  - docker run -e CI=true docker-react-app_react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
